--- a/attendance/index.html
+++ b/attendance/index.html
@@ -62,7 +62,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Wireframes and prototype</h2>
-      <p>Since attendance was such a well known and documented process in schools, I had a huge amount of insight at my disposal from stakeholders and other coworkers that had dealt with the process. My next step was to take this knowledge and try to draft up a wireframe and prototype, so that I could get to testing my ideas as soon as possible. I went through several wireframe interations with my team before moving onto prototyping in Axure, in preparation for a moderated usability test we were planning. The process began with a teacher marking the attendance in the classroom, which would then get communicated to the office, where the administrators would take action on any status other that "Present". I wanted to use color and as much bite-size info as possible to mark each student's attendance status, as I felt the most important visual signifier was to differentiate the statuses, so the office attendance taker could quickly glance at the list and find the "Absent" and "Tardy" statuses.</p>
+      <p>Since attendance was such a well known and documented process in schools, I had a huge amount of insight at my disposal from stakeholders and other coworkers that had knowledge of it. My next step was to take this knowledge and try to draft up a wireframe and prototype, so that I could get to testing my ideas as soon as possible. I went through several wireframe interations with my team before moving onto prototyping in Axure, in preparation for a moderated usability test we were planning. The process began with a teacher marking the attendance in the classroom, which would then get communicated to the office, where the administrators would take action on any status other that "Present". I wanted to use color and as much bite-size info as possible to mark each student's attendance status, as I felt the most important visual signifier was to differentiate the statuses, so the office attendance taker could quickly glance at the list and find the "Absent" and "Tardy" statuses.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -75,17 +75,46 @@
     <div class="container">
       <h2>Usability testing</h2>
 
-      <p>As projects sometimes do, this one unfortunately got frozen for the time being. Shifting priorities pushed this feature back to our Beta release, rather than MVP, so I put the brakes on it right before I began to build a prototype. My plan was to make my wireframes lightly interactive so that I could share with our users and get some insight before moving onto visual design. I made sure to document what I had learned so far during my design sprints, so that I could pick it back up easily at a later time. The knowledge I gained from this project certainly translated to others I was working on in tandem, so in the end it had a positive ripple affect, and we would revisit activity tracking in later sprints.</p>
+      <p>With some assistance from my teammates on the UX team, I conducted a usability study on the attendance feature prototype. We narrowed down to four main workflows we would have our five testers perform and follow up questions throughout the process. The testing was conducted remotely using screenshare, and we used the Rainbow Spreadsheet template to record our findings and share with stakeholders and teammates. This testing led me to adjust and iterate on the wireframes I had created, as the team and I discussed the results. One of the biggest discoveries we made at the time, was that many school offices had issues with getting updates about teachers recording attendance. They either had manual attendance books that they'd deliver to the office, or their systems were slow to update and would result in them having to call the teachers and ask why attendance wasn't submitted yet. This finding would not only push Rediker to prioritize speedy and accurate functionality with this feature, but also help us understand current process that we could replace with our web application. </p>
     </div>
-    <div class="wrapper work">
-      <div class="container">
-        <img class="drop-style" src="../img/attendance-chart.png" alt="visual concept"/>
-        <p class="img-caption">Results of our usability study</p>
-      </div>
-    </div>
-    <div class="wrapper work">
   </div>
-  
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/attendance-chart.png" alt="visual concept"/>
+      <p class="img-caption">Results of our usability study</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <h2>Visual design and mobile</h2>
+
+      <p>Armed with insight and data from usability testing, it was time to move onto creating visual mockups and documentation for this feature to get built. Using our Rediker Design System, I created some initial concepts in Figma that I would share with devs and stakeholders. My approach was simplicity but high visibility to attendance statuses that needed attention. Mobile was a bit of a challenge but highly important, as sometimes attendance would need to be taken outside of the office, such as when the school was on a field trip or during fire drills, emergencies, etc. Ultimately implementing the first version of this feature was a success and provided building blocks for more specific features to be added, like attendance for class periods and dashboard type features.</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/attendance-dayview.jpg" alt="visual concept"/>
+      <p class="img-caption">Attendance daily view</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/attendance-weekview.jpg" alt="visual concept"/>
+      <p class="img-caption">Attendance weekly view</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/attendance-bulk.jpg" alt="visual concept"/>
+      <p class="img-caption">Bulk select and apply statuses</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/attendance-mobile1.jpg" alt="visual concept"/>
+      <p class="img-caption">Mobile attendance</p>
+    </div>
+  </div>
 
   <!--Previous/Next-->
   <div class="wrapper work">
