--- a/activitytracking/index.html
+++ b/activitytracking/index.html
@@ -34,7 +34,7 @@
     <div class="container project_header">
       <div class="row-flex">
         <div class="col-flex-2">
-          <h1 class="project_title">Activity Tracking Component</h1>
+          <h1 class="project_title">Activity Tracking</h1>
 
           <p class="text-bold">Goals:</p>
           <p>Create an activity tracking component that can be reused throughout the app for seeing change history</p>
