--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="col-flex-2">
                 <p class="work-container_title">Student Attendance</p>
-                <p class="work-container_description">Conducting usability testing and creating an attendance taking feature</p>
+                <p class="work-container_description">Conducting usability testing and designing an attendance taking feature</p>
                 <a href="attendance/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
             </div>
         </div>
@@ -60,7 +60,7 @@
                 </a>
             </div>
             <div class="col-flex-2">
-                <p class="work-container_title">Activity Tracking Component</p>
+                <p class="work-container_title">Activity Tracking</p>
                 <p class="work-container_description">Creating a reusable activity tracking feature for a student information system</p>
                 <a href="activitytracking/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
             </div>
@@ -73,7 +73,7 @@
             </div>
             <div class="col-flex-2">
                 <p class="work-container_title">VoiceOps App</p>
-                <p class="work-container_description">Flagship product for voice data analytics startup</p>
+                <p class="work-container_description">Designing the flagship product for voice data analytics startup</p>
                 <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
             </div>
         </div>
@@ -97,7 +97,7 @@
               </div>
               <div class="col-flex-2">
                   <p class="work-container_title">Interactive Venue Maps</p>
-                  <p class="work-container_description">A responsive venue maps experience for ticketing websites</p>
+                  <p class="work-container_description">Creating a responsive venue maps experience for ticketing websites</p>
                   <a href="interactive_venue_maps/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
@@ -109,7 +109,7 @@
               </div>
               <div class="col-flex-2">
                   <p class="work-container_title">Spotlight Point-of-Sale</p>
-                  <p class="work-container_description">Flagship inventory management for brokers</p>
+                  <p class="work-container_description">Designing the flagship inventory management app for brokers</p>
                   <a href="point-of-sale/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
