--- a/attendance/index.html
+++ b/attendance/index.html
@@ -51,7 +51,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Evaluating current processes and problem discovery</h2>
-      <p>During my time at Rediker software, I got to work on one of the largest and most high priority features in their flagship app, the attendance taking feature. This was a long process of discovery, testing, iterating, and collaboration amongst my team that resulted in a positive change in the new application. After initially kicking off the project, I interviewed several stakeholders that had familiarity with the legacy version of attendance taking. I created some flow charts and wrote a lot of notes to help myself understand the process of attendance taking and the multiple personas and steps involved in the process. I saw how important accuracy and communication was in this process, as attendance can have a massive impact on grading and student promotion.</p>
+      <p>During my time at Rediker Software, I got to work on one of the largest and most high priority features in their flagship app, the attendance taking feature. This was a long process of discovery, testing, iterating, and collaboration amongst my team that resulted in a positive change in the new application. After initially kicking off the project, I interviewed several stakeholders that had familiarity with the legacy version of attendance taking. I created some flow charts and wrote a lot of notes to help myself understand the process of attendance taking and the multiple personas and steps involved in the process. I saw how important accuracy and communication was in this process, as attendance can have a massive impact on grading and student promotion.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -61,8 +61,13 @@
   </div>
   <div class="wrapper work">
     <div class="container">
+      <img class="drop-style" src="../img/attendance-reqs.jpg" alt="activitytracking"/>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
       <h2>Wireframes and prototype</h2>
-      <p>Since attendance was such a well known and documented process in schools, I had a huge amount of insight at my disposal from stakeholders and other coworkers that had knowledge of it. My next step was to take this knowledge and try to draft up a wireframe and prototype, so that I could get to testing my ideas as soon as possible. I went through several wireframe interations with my team before moving onto prototyping in Axure, in preparation for a moderated usability test we were planning. The process began with a teacher marking the attendance in the classroom, which would then get communicated to the office, where the administrators would take action on any status other that "Present". I wanted to use color and as much bite-size info as possible to mark each student's attendance status, as I felt the most important visual signifier was to differentiate the statuses, so the office attendance taker could quickly glance at the list and find the "Absent" and "Tardy" statuses.</p>
+      <p>Since attendance was such a well known and documented process in schools, I had a huge amount of insight at my disposal from stakeholders and other coworkers that had knowledge of it. My next step was to take this knowledge and draft up a wireframe and prototype, so that I could get to testing my ideas as soon as possible. I went through several wireframe interations with my team before moving onto prototyping in Axure, in preparation for a moderated usability test we were planning. The process began with a teacher marking the attendance in the classroom, which would then get communicated to the office, where the administrators would take action on any status other that "Present". I wanted to use color and as much bite-size info as possible to mark each student's attendance status, as I felt the most important visual signifier was to differentiate the statuses, so the office attendance taker could quickly glance at the list and find the "Absent" and "Tardy" statuses.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -88,7 +93,7 @@
     <div class="container">
       <h2>Visual design and mobile</h2>
 
-      <p>Armed with insight and data from usability testing, it was time to move onto creating visual mockups and documentation for this feature to get built. Using our Rediker Design System, I created some initial concepts in Figma that I would share with devs and stakeholders. My approach was simplicity but high visibility to attendance statuses that needed attention. Mobile was a bit of a challenge but highly important, as sometimes attendance would need to be taken outside of the office, such as when the school was on a field trip or during fire drills, emergencies, etc. Ultimately implementing the first version of this feature was a success and provided building blocks for more specific features to be added, like attendance for class periods and dashboard type features.</p>
+      <p>Armed with insight and data from usability testing, it was time to move onto creating visual mockups and documentation for this feature to get built. Using our Rediker Design System, I created some initial concepts in Figma that I would share with devs and stakeholders. My approach was simplicity but high visibility to attendance statuses that needed attention. Mobile was a bit of a challenge but highly important, as sometimes attendance would need to be taken outside of the office, such as when the school was on a field trip or during fire drills, emergencies, etc. Ultimately implementing the first version of this feature was a success and provided building blocks for more specific features to be added, like attendance for class periods and dashboard widgets.</p>
     </div>
   </div>
   <div class="wrapper work">
