--- a/activitytracking/index.html
+++ b/activitytracking/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="button-secondary previous">
         <a href="../attendance/">
-          <p>Previous: Student Attendance</p>
+          <p><i class="material-icons">keyboard_arrow_left</i>Previous: Student Attendance</p>
         </a>
       </div>
     </div>
