--- a/voiceops-app/index.html
+++ b/voiceops-app/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="button-secondary previous">
         <a href="../activitytracking/">
-          <p><i class="material-icons">keyboard_arrow_right</i>Previous: Activity Tracking</p>
+          <p><i class="material-icons">keyboard_arrow_left</i>Previous: Activity Tracking</p>
         </a>
       </div>
     </div>
