--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="button-secondary previous">
         <a href="/voiceops-app/">
-          <p>Previous: VoiceOps App</p>
+          <p><i class="material-icons">keyboard_arrow_left</i>Previous: VoiceOps App</p>
         </a>
       </div>
     </div>
