--- a/attendance/index.html
+++ b/attendance/index.html
@@ -37,7 +37,7 @@
           <h1 class="project_title">Student Attendance</h1>
 
           <p class="text-bold">Goals:</p>
-          <p>Conduct usability testing and design a new feature for daily attendance taking</p>
+          <p>Conduct usability testing and design a new attendance taking feature</p>
           <br/>
           <p class="text-bold">My Role:</p>
           <p>Usability testing moderator, user research, wireframing, visual design</p>
@@ -51,7 +51,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Evaluating current processes and problem discovery</h2>
-      <p>During my time at Rediker Software, I got to work on one of the largest and most high priority features in their flagship app, the attendance taking feature. This was a long process of discovery, testing, iterating, and collaboration amongst my team that resulted in a positive change in the new application. After initially kicking off the project, I interviewed several stakeholders that had familiarity with the legacy version of attendance taking. I created some flow charts and wrote a lot of notes to help myself understand the process of attendance taking and the multiple personas and steps involved in the process. I saw how important accuracy and communication was in this process, as attendance can have a massive impact on grading and student promotion.</p>
+      <p>During my time at Rediker Software, I got to work on one of the largest and most high priority features in their flagship student information SAAS app, the attendance taking feature. This was a long process of discovery, testing, iterating, and collaboration amongst my team that resulted in a positive change in the new application. After initially kicking off the project, I interviewed several stakeholders that had familiarity with the legacy version of attendance taking. I created some flow charts and wrote a lot of notes to help myself understand the process of attendance taking and the multiple personas and steps involved in the process. I saw how important accuracy and communication was in this process, as attendance can have a massive impact on grading and student promotion.</p>
     </div>
   </div>
   <div class="wrapper work">
