--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-flex-2">
                 <p class="work-container_title">VoiceOps App</p>
-                <p class="work-container_description">Designing the flagship product for voice data analytics startup</p>
+                <p class="work-container_description">Designing the flagship product for a voice data analytics startup</p>
                 <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
             </div>
         </div>
@@ -85,7 +85,7 @@
               </div>
               <div class="col-flex-2">
                   <p class="work-container_title">VoiceOps.com</p>
-                  <p class="work-container_description">Marketing site for a voice data analytics startup</p>
+                  <p class="work-container_description">Designing and coding the site for a voice data analytics startup</p>
                   <a href="voiceops/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
