--- a/attendance/index.html
+++ b/attendance/index.html
@@ -116,6 +116,12 @@
   </div>
   <div class="wrapper work">
     <div class="container">
+      <img class="drop-style" src="../img/attendance-dashboard.jpg" alt="visual concept"/>
+      <p class="img-caption">Attendance dashboard view in student profile</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
       <img class="drop-style" src="../img/attendance-mobile1.jpg" alt="visual concept"/>
       <p class="img-caption">Mobile attendance</p>
     </div>
